--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "csv-streamify": "^1.0.0",
     "debug": "^1.0.4",
     "event-stream": "^3.1.5",
-    "request": "^2.36.0"
+    "request": "^2.36.0",
+    "yargs": "^1.2.6"
   },
   "devDependencies": {
     "mocha": "^1.20.1",
-    "coffee-script": "^1.7.1"
+    "coffee-script": "^1.7.1",
+    "mongodb": "^1.4.7"
   }
 }
