--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "debug": "^1.0.4",
     "event-stream": "^3.1.5",
     "request": "^2.36.0",
-    "yargs": "^1.2.6"
+    "yargs": "^1.2.6",
+    "mongodb-datasets": "^0.1.0"
   },
   "devDependencies": {
     "mocha": "^1.20.1",
