--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
   },
   "dependencies": {
     "JSONStream": "^0.8.3",
+    "bsonstream": "^0.1.1",
     "csv-streamify": "^1.0.0",
     "debug": "^1.0.4",
     "event-stream": "^3.1.5",
+    "mongodb-datasets": "^0.1.0",
     "request": "^2.36.0",
-    "yargs": "^1.2.6",
-    "mongodb-datasets": "^0.1.0"
+    "yargs": "^1.2.6"
   },
   "devDependencies": {
     "mocha": "^1.20.1",
