--- a/package.json
+++ b/package.json
@@ -16,19 +16,27 @@
   "scripts": {
     "test": "mocha"
   },
+  "bin": {
+    "mim": "bin/mim.js"
+  },
   "dependencies": {
-    "JSONStream": "^0.8.3",
-    "bsonstream": "^0.1.1",
-    "csv-streamify": "^1.0.0",
-    "debug": "^1.0.4",
-    "event-stream": "^3.1.5",
-    "mongodb-datasets": "^0.1.0",
-    "request": "^2.36.0",
-    "yargs": "^1.2.6"
+    "JSONStream": "~0.10.0",
+    "bsonstream": "~0.1.1",
+    "csv-streamify": "~1.0.0",
+    "debug": "~2.1.1",
+    "docopt": "~0.4.1",
+    "event-stream": "~3.2.1",
+    "gunzip-maybe": "~1.1.0",
+    "mongodb": "~1.4.26",
+    "mongodb-datasets": "~0.1.0",
+    "mongodb-extended-json": "~1.1.0",
+    "mongodb-uri": "~0.9.7",
+    "peek-stream": "~1.1.1",
+    "request": "~2.51.0",
+    "yargs": "~1.3.3"
   },
   "devDependencies": {
-    "mocha": "^1.20.1",
-    "coffee-script": "^1.7.1",
-    "mongodb": "^1.4.7"
+    "mocha": "~2.1.0",
+    "coffee-script": "~1.8.0"
   }
 }
